...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="timer"
            type="com.example.timerapp.database.Timer" />

        <variable
            name="clickListener"
            type="com.example.timerapp.adapter.TimerListListener" />

...
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="8dp"
            app:cardElevation="10dp">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/start_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|end"
                android:layout_margin="@dimen/card_margin"
                android:onClick="@{() -> clickListener.onStartClick(timer)}"
                app:backgroundTint="#ffffff"
...
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> clickListener.onClick(timer)}"
                    android:orientation="vertical"
                    android:padding="@dimen/card_padding">

                    <TextView
                        android:id="@+id/detail_timer_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{timer.name}"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                        tools:text="基本情報技術者午後試験" />

...
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/standard_margin"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/detail_total_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                            app:totalTime="@{timer.total}"
                            tools:text="150分"/>

                        <ImageView
                            android:id="@+id/detail_notification_type"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/card_margin"
                            android:layout_marginEnd="@dimen/standard_margin"
                            app:notificationType="@{timer.notificationType}"
                            app:timerDetail="@{timer.detail}"
                            tools:src="@drawable/ic_vibration" />

                        <TextView
                            android:id="@+id/detail_notification_type_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawablePadding="@dimen/icon_padding"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                            app:notificationType="@{timer.notificationType}"
                            tools:text="通知" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/detail_title"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/standard_margin"
                        android:orientation="horizontal">

                        <TextView
...
                    android:layout_height="wrap_content"
                    app:el_duration="1000"
                    app:el_expanded="false"
                    app:el_parallax="0.5">

                    <TextView
                        android:id="@+id/detail_detail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/card_margin"
                        android:layout_marginTop="@dimen/standard_margin"
                        android:text="@{timer.detail}"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
...
