...
            android:text="@string/setting_sound"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/setting_title" />

        <Spinner
            android:id="@+id/sounds_spinner"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@{viewModel.soundTypes}"
            android:onItemSelected="@{(parent, view, position, id) -> viewModel.onItemSelectedNumber(position)}"
            android:selection="@={viewModel.selectedPosition}"
...
            android:layout_marginStart="@dimen/standard_margin"
            android:layout_marginTop="@dimen/standard_margin"
            android:layout_marginEnd="@dimen/standard_margin"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/save_update" />

        <Button
            android:id="@+id/save_update"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
            android:onClick="@{() -> viewModel.updateSettingTimer()}"
            android:text="@string/setting_update"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sounds_spinner" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/preset_timer_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/setting_margin"
            android:scrollbars="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
...
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider2"
            app:layout_constraintVertical_bias="1.0" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/icon_margin"
            android:layout_marginBottom="@dimen/icon_margin"
            android:elevation="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_add" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/delete_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/icon_margin"
            android:layout_marginBottom="@dimen/icon_margin"
            android:backgroundTint="@color/white"
            android:elevation="10dp"
...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/add_list"
            app:srcCompat="@drawable/ic_delete"
            app:tint="@color/secondaryColor" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/initial_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_margin"
            android:visibility="@{viewModel.isInitial() ? View.VISIBLE : View.GONE}"
            app:cardCornerRadius="8dp"
            app:cardElevation="10dp"
...
