...
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/delete_detail_timer_name"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:text="@{timer.name}"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
...
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/standard_margin"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/delete_detail_total_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                            app:totalTime="@{timer.total}"
                            tools:text="150分" />

...
                            android:layout_marginEnd="@dimen/standard_margin"
                            app:notificationType="@{timer.notificationType}"
                            app:timerDetail="@{timer.detail}"
                            tools:src="@drawable/ic_vibration" />

                        <TextView
                            android:id="@+id/delete_detail_notification_type_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawablePadding="@dimen/icon_padding"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                            app:notificationType="@{timer.notificationType}"
                            tools:text="通知" />
...
                    android:layout_height="wrap_content"
                    app:el_duration="1000"
                    app:el_expanded="false"
                    app:el_parallax="0.5">

                    <TextView
                        android:id="@+id/delete_detail_detail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/card_margin"
                        android:layout_marginTop="@dimen/standard_margin"
                        android:text="@{timer.detail}"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
...
